<resources>
    <string name="app_name">The Climbing Plan</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="historial">Historial</string>
    <string name="realizar_entrenamiento">Realizar Entrenamiento</string>
    <string name="modificar_entrenamiento">Modificar Entrenamiento</string>
    <string name="eliminar_entrenamiento">Eliminar Entrenamiento</string>
    <string name="crear_sesion_de_entrenamiento">Crear Sesión de Entrenamiento</string>
    <string name="nombre">Nombre</string>
    <string name="descripci_n">Descripción</string>
    <string name="textview">Categoria</string>
    <string name="todo">TODO</string>
    <string name="aceptar">aceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="google">Google</string>
    <string name="serie_1">Serie 1</string>
    <string name="a_adir">Añadir</string>
    <string name="ciclos">Ciclos</string>
    <string name="duraci_n">Duración</string>
    <string name="descanso_por_ciclo">Descanso por ciclo</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="introducir_duraci_n">Introducir Duración</string>
    <string name="introducir_repeticiones">Introducir Repeticiones</string>
    <string name="ejercicio">Ejercicio</string>
</resources>