<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondocolor"
    android:backgroundTint="@color/claro"
    tools:context=".FormularioEntrenamiento">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="334dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddSerie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etNombreEntrenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#90CAF9" />

            <EditText
                android:id="@+id/etDescripcionEntrenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/descripci_n"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#90CAF9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerCategoria"
                    android:layout_width="341dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    tools:ignore="SpeakableTextPresentCheck" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnCrearCategoria"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:fabCustomSize="48dp"
                    app:srcCompat="@android:drawable/ic_menu_add"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/seriesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddSerie"
        android:layout_width="56dp"
        android:layout_height="77dp"
        android:layout_marginBottom="33dp"
        android:contentDescription="TODO"
        android:src="@drawable/add_circle"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnVolverFormularioEntr"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textColor="#E1BEE7" />

        <Button
            android:id="@+id/btnAceptarFormuEntre"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar"
            android:textColor="#E1BEE7" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>